# api/routes/adminRoutes/customer.Routes.js
@@ -1,9 +1,10 @@
 import express from 'express';
-import { addNewUsers } from '../../controllers/adminControllers/products.controller.js';
+import { addNewUsers, getAllUsers } from '../../controllers/adminControllers/customer.controllerjs.js';
 import { validateBody } from '../../../middlewares/validate.middleware.js';
 import { newUser } from '../../validators/adminValidator/product.Validator.js';
 const router = express.Router();
 
 router.post('/addNewUsers', addNewUsers);   
+router.get('/getAllUsers', getAllUsers);   
 
 export default router;
