# swagger/swagger-output.json
@@ -41,7 +41,7 @@
                 },
                 "emailaddress": {
                   "type": "string",
-                  "example": " johndoe@example.com"
+                  "example": "john.doe@example.com"
                 },
                 "password": {
                   "type": "string",
@@ -86,7 +86,7 @@
               "properties": {
                 "emailaddress": {
                   "type": "string",
-                  "example": " johndoe@example.com"
+                  "example": "john.doe@example.com"
                 },
                 "password": {
                   "type": "string",
@@ -292,81 +292,7 @@
         }
       }
     },
-    "/products/addNewUsers": {
-      "post": {
-        "tags": [
-          "User"
-        ],
-        "summary": "Add a new user",
-        "description": "This endpoint allows you to add a new user to the system.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "User details",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "type": "number",
-                  "example": 1
-                },
-                "Learners": {
-                  "type": "string",
-                  "example": "John Doe"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "john.doe@example.com"
-                },
-                "avatar": {
-                  "type": "string",
-                  "example": "https://res.cloudinary.com/dpxvet5ra/image/upload/v1748110022/xmzqvlmrdtm7tzqwlr1m.jpg"
-                },
-                "country": {
-                  "type": "string",
-                  "example": "USA"
-                },
-                "Language": {
-                  "type": "string",
-                  "example": "English"
-                },
-                "Occupation": {
-                  "type": "string",
-                  "example": "Engineer"
-                },
-                "Objective": {
-                  "type": "string",
-                  "example": "Learn about organic food"
-                },
-                "Subscription": {
-                  "type": "boolean",
-                  "example": true
-                }
-              },
-              "required": [
-                "id",
-                "Learners",
-                "email",
-                "avatar",
-                "country",
-                "Language",
-                "Occupation",
-                "Objective",
-                "Subscription"
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/customers/add": {
+    "/products/addProduct": {
       "post": {
         "tags": [
           "Product"
@@ -437,6 +363,108 @@
             }
           }
         ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/products/getAllProducts": {
+      "get": {
+        "tags": [
+          "Product"
+        ],
+        "summary": "Get all products",
+        "description": "This endpoint retrieves all products from the database.",
+        "responses": {
+          "200": {
+            "description": "Products retrieved successfully"
+          }
+        }
+      }
+    },
+    "/customers/addNewUsers": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Add a new user",
+        "description": "This endpoint allows you to add a new user to the system.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "User details",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "Learners": {
+                  "type": "string",
+                  "example": "John Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "john.doe@example.com"
+                },
+                "avatar": {
+                  "type": "string",
+                  "example": "https://res.cloudinary.com/dpxvet5ra/image/upload/v1748110022/xmzqvlmrdtm7tzqwlr1m.jpg"
+                },
+                "country": {
+                  "type": "string",
+                  "example": "India"
+                },
+                "Language": {
+                  "type": "string",
+                  "example": "English"
+                },
+                "Occupation": {
+                  "type": "string",
+                  "example": "Engineer"
+                },
+                "Objective": {
+                  "type": "string",
+                  "example": "Learn about organic food"
+                },
+                "Subscription": {
+                  "type": "boolean",
+                  "example": true
+                }
+              },
+              "required": [
+                "id",
+                "Learners",
+                "email",
+                "avatar",
+                "country",
+                "Language",
+                "Occupation",
+                "Objective",
+                "Subscription"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/customers/getAllUsers": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Get all users",
+        "description": "This endpoint retrieves all users from the system.",
         "responses": {
           "default": {
             "description": ""
